--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
       <%= render 'shared/devisemes' %>
 
   <div class="form-group">
-    <%= f.email_field :fullname, autofocus: true, autocomplete: "fullname", placeholder: "Full Name", class: "form-control" %>
+    <%= f.text_field  :fullname, autofocus: true, autocomplete: "fullname", placeholder: "Full Name", class: "form-control" %>
   </div>
 
   <div class="form-group">
