--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,18 +2,191 @@
 @import "bootstrap";
 @import "toastr";
 
-.avatar_small {
+body {
+	color: #565a5c;
+	background-color: #F8F8F8;
+	font-family: "Varela Round", "Helvetica Neue", "Helvetica", "Arial", sans-serif ;
+}
+
+a {
+	color: #00A699;
+}
+
+.container {
+	width: 80%;
+}
+
+.text-babu, .icon-babu {
+	color: #00A699;
+}
+
+.navbar-default {
+	background-color: #FFFFFF;
+
+}
+
+.navbar-default .navbar-brand {
+	color: #FF5A5F;
+	font-size: 2em;
+	font-weight: 400;
+}
+
+
+/*BUTTONS*/
+.btn-block {
+	display: block;
+	white-space: normal;
+	width: 100%;
+}
+
+
+.btn {
+	color: #fff;
+	border-radius: 5px;
+	font-weight: bold;
+	padding: 9px 27px;
+}
+
+.btn-small {
+	padding: 5px 15px;
+	margin-top: 15px;
+
+}
+
+.btn:hover, .btn:focus {
+	color: #fff;
+}
+
+.btn.btn-default {
+	width: 100%;
+}
+
+
+.btn.btn-default {
+	width: 100%;
+	border-color: #c4c4c4;
+	background: #white;
+	color: #484848;
+	border-radius: 2px;
+	margin-top: 10px;
+}
+
+.btn.btn-normal {
+	border: 1px solid #ff5a5f;
+	background-color: #e00007;
+}
+
+.btn.btn-normal:active {
+	outline: none;
+	background-color: #e00007;
+	background-color: #e00007;
+}
+
+.btn.btn-form {
+	border: 1px solid #00A699;
+	background-color: #00A699;
+}
+
+.btn.btn-form:active {
+	outline: none;
+	background-color: #066165;
+	background-color: #066165;
+}
+
+.btn.btn-facebook {
+	border: 1px solid #3B5998;
+	background-color: #3B5998;
+}
+
+.btn.btn-facebook:active {
+	outline: none;
+	background-color: #2d467b;
+	background-color: #2d467b;
+}
+
+/*PANELS*/
+
+.panel-default .panel-heading {
+	color: #ffffff;
+	background-color: #00A699;
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.row-space-1 {
+	margin-top: 6px;
+	margin-bottom: 60px;
+}
+
+.row-space-2 {
+	margin-top: 12px;
+	margin-bottom: 12px;
+}
+
+.row-space-3 {
+	margin-top: 24px;
+	margin-bottom: 24px;
+}
+
+.description {
+	color: #575757;
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 25px;
+}
+
+/*AVATAR*/
+.avatar-small {
 	width: 28px;
 }
 
-.avatar_medium {
+.avatar-medium {
 	width: 48px;
 }
 
-.avatar_large {
+.avatar-large {
 	width: 68px;
 }
 
-.avatar_full {
+.avatar-full {
 	width: 100%;
+}
+
+/*FORMS*/
+
+.form-group {
+ margin-bottom: 25px;
+}
+
+.form-control {
+border-radius: 2px;
+ height: 4rem;
+}
+
+.sidebar-list {
+	padding: 0;
+	list-style: none;
+}
+
+.sidebar-item {
+	padding: 10px 0;
+	font-size: 16px;
+	color: #82888a;
+}
+
+.sidebar-link {
+	color: #82888a;
+	text-decoration: none;
+
+}
+
+.sidebar-link:hover, .sidebar-link:focus {
+	color: #CACCCD;
+	text-decoration: none;
+}
+
+.active.sidebar-link {
+	color: #565A5C;
+	font-weight: bold;
+	text-decoration: none;
 }
