--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,29 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <h2 class="text-center">Profile</h2>
+  <div class="col-md-3">
+    <ul class="sidebar-list">
+      <li class="sidebar-item"><%= link_to "Edit Profile", edit_user_registration_path, class: "sidebar-link active" %></li>
+    </ul>
     <br/>
-
+    <%= link_to "View My Profile", user_path(current_user.id), class: "btn btn-default" %>
+  </div>
+  <div class="col-md-9">
+    <div class="panel panel-default">
+      <div class="panel-heading">Your Profile</div>
+      <div class="panel-body">
+        <div class="container">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= render 'shared/devisemes' %>
 
             <div class="form-group">
-                <%= f.text_field :fullname, autofocus: true, autocomplete: "fullname", placeholder: "Full Name", class: "form-control" %>
+                <%= f.text_field :fullname, autofocus: true, placeholder: "Full Name", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+                <%= f.text_field :phone_number, autofocus: true, placeholder: "Phone Number", class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+                <%= f.text_area :description, rows: 5, cols: 25, autofocus: true, placeholder: "Description", class: "form-control" %>
             </div>
 
             <div class="form-group">
@@ -26,14 +42,16 @@
               <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Confirm Password", class: "form-control"  %>
             </div>
 
-            <div class="form-group">
-              <%= f.password_field :current_password, autocomplete: "off", placeholder: "Current Password", class: "form-control"  %>
-            </div>
+            
 
             <div class="actions">
-              <%= f.submit "Save", class: "btn btn-primary" %>
+              <%= f.submit "Save", class: "btn btn-normal btn-block" %>
             </div>
           <% end %>
-
-   </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
