--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,9 +26,15 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: "btn btn-primary" %>
+    <%= f.submit "Sign up", class: "btn btn-normal btn-block" %>
   </div>
 <% end %>
+
+<hr/>
+  
+ 
+      <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: "tn btn-facebook btn-block" %>
+      </div>
 
 
 
